# SME2009-HPDA-cartographer-parallel

./: .gitignore  README.md
benchmark/: Makefile  README.md  compare.sh  pa01_microbench.cpp  run_microbench.sh  run_sweep_jetson.sh  score_all_bench.cpp  verify_scores.cpp
cartographer_parallel/: README.md
cartographer_parallel/cartographer_parallel/: CMakeLists.txt
cartographer_parallel/cartographer_parallel/include/cartographer_parallel/: assignment.h  fast_matcher.h  score_all_bench.h  score_all_cuda.h
cartographer_parallel/cartographer_parallel/launch/: cartographer_parallel_with_bag.launch  fast_correlative.launch
cartographer_parallel/cartographer_parallel/src/: fast_correlative_node.cpp  fast_matcher.cpp  score_all.cpp  score_all_cuda.cu
data/: pa01_baseline_summary.txt  pa01_opt1_licm_summary.txt  pa01_opt2_loop_interchange_summary.txt  pa01_opt3_prefetch_summary.txt  pa01_opt4_branchless_summary.txt  pa01_opt5_all_cpu_summary.txt  pa01_opt6_best_summary.txt
docs/: CPU_OPTIMIZATION_PLAN.md  PA01_CPU_ANALYSIS.md  PA01_CPU_VERIFICATION.md  PA01_DEVELOPMENT_LOG_GPU.md  PA01_DEVELOPMENT_LOG_PART2.md  PA01_GPU.md  PA01_PROFILING_AND_WORKFLOW.md
scripts/: collect_pa01_logs.sh
